--- a/action.yml
+++ b/action.yml
@@ -84,6 +84,7 @@ runs:
         spec=$(basename ${{ inputs.spec }})
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin --clean --buildsrpm --config-opts='use_host_resolv=True' --config-opts='rpmbuild_networking=True' --define='_disable_source_fetch 0' --spec $spec /builddir/build/SPECS
+        ls -l /builddir/build/SPECS
       shell: bash
 
     - id: build
