--- a/action.yml
+++ b/action.yml
@@ -84,7 +84,9 @@ runs:
         spec=$(basename ${{ inputs.spec }})
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin --clean --buildsrpm --config-opts='use_host_resolv=True' --config-opts='rpmbuild_networking=True' --define='_disable_source_fetch 0' --spec /tmp/$spec
-        podman exec $cid dnf -y install mlocate; updatedb; locate apache
+        podman exec $cid dnf -y install mlocate
+        podman exec $cid updatedb; locate apache
+        #
         #
         #/builddir/build/SPECS
       shell: bash
