--- a/action.yml
+++ b/action.yml
@@ -85,7 +85,7 @@ runs:
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin --clean --buildsrpm --config-opts='use_host_resolv=True' --config-opts='rpmbuild_networking=True' --define='_disable_source_fetch 0' --spec /tmp/$spec
         podman exec $cid dnf -y install mlocate
-        podman exec $cid rpm -qil plocate
+        podman exec $cid /usr/bin/locate apache
         #
         #
         #/builddir/build/SPECS
