--- a/action.yml
+++ b/action.yml
@@ -82,9 +82,11 @@ runs:
       run: |
         cid=$(cat action.cid)
         spec=$(basename ${{ inputs.spec }})
+        podman exec $cid dnf -y install mlocate
+        podman exec $cid /usr/sbin/updatedb
+        podman exec $cid /usr/bin/locate apache
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin --clean --buildsrpm --config-opts='use_host_resolv=True' --config-opts='rpmbuild_networking=True' --define='_disable_source_fetch 0' --spec /tmp/$spec
-        podman exec $cid dnf -y install mlocate
         podman exec $cid /usr/sbin/updatedb
         podman exec $cid /usr/bin/locate apache
         #
