--- a/action.yml
+++ b/action.yml
@@ -151,6 +151,7 @@ runs:
       run: |
         cid=$(cat action.cid)
         podman exec $cid spectool -g -C /builddir/build/SOURCES /tmp/$spec
+        podman exec $cid du -h /builddir/build/SOURCES/*
       shell: bash
 
     - id: build
