fix fetch copyin

--- a/action.yml
+++ b/action.yml
@@ -150,8 +150,12 @@ runs:
       if: inputs.fetch-sources == 'true'
       run: |
         cid=$(cat action.cid)
-        podman exec $cid spectool -g -C /builddir/build/SOURCES /tmp/$spec
-        podman exec $cid du -h /builddir/build/SOURCES/*
+        mkdir /tmp/fetch
+        podman exec $cid spectool -g -C /tmp/fetch /tmp/$spec
+        podman exec $cid du -h /tmp/fetch/*
+        for f in $(podman exec $cid ls /tmp/fetch); do
+          podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/fetch/$f /builddir/build/SOURCES
+        done
       shell: bash
 
     - id: build
