--- a/action.yml
+++ b/action.yml
@@ -149,10 +149,8 @@ runs:
     - id: fetch-remote-sources
       if: inputs.fetch-sources == 'true'
       run: |
-        cat /tmp/$spec
-        
         cid=$(cat action.cid)
-        mkdir /tmp/fetch
+        spec=$(basename ${{ inputs.spec }})
         podman exec $cid spectool -g -C /tmp/fetch /tmp/$spec
         podman exec $cid du -h /tmp/fetch/*
         for f in $(podman exec $cid ls /tmp/fetch); do
