--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
   sources:
     description: Path (file or dir) mapped to the rpmbuild/SOURCES directory
     required: false
+  fetch-sources:
+    description: Use spectool to fetch remote SourceX entries
+    required: false
   cache:
     description: Enable chroot environment caching
     required: false
@@ -95,6 +98,13 @@ runs:
         fi
       shell: bash
 
+    - id: install-spectool
+      if: inputs.fetch-sources == 'true'
+      run: |
+        cid=$(cat action.cid)
+        podman exec $cid dnf install -y rpmdevtools
+      shell: bash
+
     - id: save-container
       if: inputs.cache == 'true' && steps.install-mock.outputs.completed == 'true'
       run: |
@@ -134,6 +144,17 @@ runs:
         spec=$(basename ${{ inputs.spec }})
         podman cp ${{ inputs.spec }} $cid:/tmp/$spec
         podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/$spec /builddir/build/SPECS
+      shell: bash
+
+    - id: fetch-remote-sources
+      if: inputs.fetch-sources == 'true'
+      run: |
+        cid=$(cat action.cid)
+        spec=$(basename ${{ inputs.spec }})
+        podman exec $cid spectool -g -C /tmp/fetch /tmp/$spec
+        for f in $(podman exec $cid ls /tmp/fetch); do
+          podman exec $cid mock -r ${{ inputs.chroot }} --copyin /tmp/fetch/$f /builddir/build/SOURCES
+        done
       shell: bash
 
     - id: build
